# cheztheme

./: .gitignore  Cargo.toml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: config.rs  lib.rs  themes.rs
presets/: tokyo-mix.yaml
src/: apply.rs  main.rs  themes.rs
widget/: index.html  package-lock.json  package.json
widget/src/: App.css  App.tsx
widget/src-tauri/: Cargo.toml  tauri.conf.json
widget/src-tauri/capabilities/: default.json
widget/src-tauri/src/: lib.rs  main.rs
widget/src/components/: badge.tsx  button.tsx  input.tsx
