[package]
name = "cheztheme"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
colored = "3.0.0"
hex_color = "3.0.0"
include_dir = "0.7.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
toml_edit = "0.22.27"
